fix(sidebar): whitespace nowrap for the sidebar

--- a/src/assets/css/style.rtl.css
+++ b/src/assets/css/style.rtl.css
@@ -33991,6 +33991,7 @@ a:hover {
   display: flex;
   align-items: center;
   flex-grow: 1;
+  white-space: nowrap;
 }
 .menu-item .menu-link .menu-badge {
   flex-shrink: 0;
